@@ -1,0 +1,39 @@
+name    = GappX-FormTraits
+author  = Jeffrey Ray Hallock <jeffrey.hallock@gmail.com>
+license = Artistic_2_0
+copyright_holder = Jeffrey Ray Hallock
+
+[GatherDir]
+
+[MetaYAML]
+
+[MakeMaker]
+
+[Manifest]
+
+[Prereqs]
+Gapp = 0
+
+[PruneCruft]
+
+[Readme]
+
+[License]
+
+[ConfirmRelease]
+
+[Git::NextVersion]
+
+[NextRelease]
+format = %-9v %{yyyy-MM-dd HH:mm:ss}d
+
+[PkgVersion]
+
+[Git::Commit]
+
+[Git::Tag]
+
+[UploadToCPAN]
+
+
+
